# FIFA-WINNER-SKILL

./: .env.example  .gitignore  AGENT_README.md  CODEOWNERS  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SKILL.md  TODO.md  install_as_skill.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: agent-runtime-react-and-reflection.md  architecture-improvement-plan.md  data-collection-research.md  data-collection-usage-guide.md  final-summary.md  free-data-collection-plan.md  implementation-summary.md  public-knowledge-and-odds-source-design.md  quick-reference-card.md  runtime-agent-user-data-overlay-guide.md  upgrade-plan-2026.md
examples/: sample-poster-manifest.json  sample-poster-result-blocked.json  sample-prediction-report.json
schema/: daily-prediction-report.schema.json  github-readiness.schema.json  poster-manifest.schema.json  profile-tasks.schema.json  source-readiness.schema.json  source-snapshot-manifest.schema.json
scripts/: daily_evidence_input.py  daily_prediction_runner.py  fifa_squad_pdf_parser.py  octopus_paul_agent.py  poster_generator.py  poster_prompt_builder.py  prediction_evaluation_dashboard.py  prediction_evaluator.py  prediction_report_prompt_builder.py  prediction_scoring_model.py  tianji_oracle.py  update_readme_and_history.py  worldcup_core.py  worldcup_db.py  worldcup_edition_init.py  worldcup_export_standalone.py  worldcup_fixture_parser.py  worldcup_github_readiness_auditor.py  worldcup_history_fetcher.py  worldcup_live_fetcher.py  worldcup_prediction_evidence_planner.py  worldcup_ranking_parser.py  (+2 more)
(+1672 files in other folders)
