[project]
name = "fifa-winner-skill"
version = "0.1.0"
description = "Reusable FIFA World Cup knowledge-base and entertainment-prediction skill"
requires-python = ">=3.10"
dependencies = [
  "pdfplumber>=0.10"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
